--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,11 @@ Welcome! This is a big update and a big step for us.
 * Better dashboard let you know what's up.
 * Remove some unnecessary cruft.
 
+=0.9.9=
+
+* Plugin updates fix
+* Add-ons not loading, e.g. Stripe.
+
 =0.9.8.4=
 
 * Dashboard fix
