--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+= 1.0.5 =
+
+* New templating class (select the invoice/estimate template)
+* New status UI
+* Notification updates
+* Better rewrite handling
+* Minor bug fixes
+
+= 1.0.2 =
+
+* Settings API improvements
+
 = 1.0.1 =
 
 * Localization support!
