--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
-= 1.0.5 =
+= 1.0.6 =
 
+* Auto upgrades fix for pro users
+
+= 1.0.5 =
 * New templating class (select the invoice/estimate template)
 * New status UI
 * Notification updates
