--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+= 1.0.9 =
+
+_Bug Fixes_
+
+* Deposits bug for free versions
+* Tasks clarification for free version
+
+_Features_
+
+* Custom template messaging improvements
+
 = 1.0.8 =
 
 _Bug Fixes_
