--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 1.0.10 =
+
+* _Bug Fixes_
+** Client could have non-user_ids associated
+** Handle text input with bad formatting better
+
 = 1.0.9.1 =
 
 * _Bug Fixes_
