--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 1.0.10.1 =
+
+* _Bug Fixes_
+
+** Freshbooks payment import fix. FBAPI uses an unconventional amount format (i.e. 353634.980)
+
 = 1.0.10 =
 
 * _Bug Fixes_
