--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+= 1.1.0.1 =
+
+* _Bug Fixes:_
+	* Saving error
+	* Line item width after payment
+	* Line item width after payment
+
 = 1.1 =
 
 * _Features:_
