--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+= 1.1.3 =
+
+* _Changes:_
+	* New hooks for estimates and invoice templates
+	* Starting to create some unit tests
+	* Doc changes
+
+* _Bug Fixes:_
+	* Fix qtip
+	* Total calculation issue with template tag
+
 = 1.1.2 =
 
 * _Changes:_
