--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,14 @@
+= 1.1.4 =
+
+* _Changes:_
+	* No page breaks when printing large invoices/estimates
+	* Better error handling for invoices without clients assigned
+	* Helper functions for future payment processors
+	* More hooks and filters
+
+* _Bug Fixes:_
+	* Critical Paypal EC update to capture payment
+
 = 1.1.3 =
 
 * _Changes:_
