--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,10 @@
-= 1.1.5 =
+= 1.1.6 =
+* _Bug Fixes:_
+	* Prevent post save looping on some hosts
+* _Changes:_
+	* Customizer compatibility for logo uploading.
 
+= 1.1.5 =
 * _Changes:_
 	* More hooks and filters
 	* fix for unit tests
