--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+= 3.1 =
+
+* Dashboard updates including method to flush cached values
+* Notification shortcode filters
+
+= 3.0.1 =
+
+* Reporting fixes
+
 = 3.0 =
 
 * New: Recurring Payments (aka subscriptions)
