--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 3.3 =
+
+* Fix: Charts on reports dashboard not working
+* Fix: Misnamed Dutch translation files 
+
 = 3.2.3 =
 
 * Fix: Firefox not allowing negative value in qty inputs 
