--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 4.1.1 =
+
+* FIX: Fixing bad build with white screen of death. Sorry! Seriously! Sorry!
+
 = 4.1 =
 
 * NEW: Allow to clean up notifications, which is a fix from a bug in an older version.
