--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-= 4.1.1 =
+= 4.1.2 =
 
+* FIX: Compatibility fix with some plugins, namely Visual Composer
 * FIX: Fixing bad build with white screen of death. Sorry! Seriously! Sorry!
 
 = 4.1 =
