--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 4.3.2 =
+
+* IMPROVEMENT: Auto updates
+* UPDATE: PO updates
+* FIX: Better handling of client dashboard page id caching
+
 = 4.3.1 =
 
 * FIX: Expiration dates not displaying
