--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 4.5 =
+
+* IMPROVEMENT: UI update so other plugins wont conflict.
+* Update: Future status
+
 = 4.4 =
 
 * IMPROVEMENT: Estimates and Invoices can have strings for IDs
