--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 = 4.5 =
 
 * IMPROVEMENT: UI update so other plugins wont conflict.
+* Fix: [invoice_total_due] should respect deposit amounts
 * Update: Future status
 
 = 4.4 =
