--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,24 @@
+= 6.0 =
+
+* NEW: Zapier Integration (pro version)
+* NEW: CSV Importing
+* NEW: Toggl Integration (pro version)
+* NEW: Filter for payment reminder delay, si_get_overdue_payment_reminder_delay (pro version)
+* NEW: Invoice that is voided will have a new stamp plus the user can't pay
+* NEW: Allow for blank terms and notes with [si_blank] shortcode
+* Improvement: API Updates for Future Release
+* Improvement: CSV Importing of estimates and line items (with examples)
+* Improvement: View logs adjustment to prevent duplication
+* Improvement: Adjust Estimate/Invoice ID after clone
+* Improvement: Confirmation page template updated
+* Improvement: Handle payments better when invoice is deleted
+* FIX: Redactor bug fixes when used within modal
+* FIX: Client dashboard: multiple clients for a single user (pro version)
+* FIX: Cloned Estimates/Invoices shouldn't retain the same status
+* FIX: Send estimates/invoices when saved if recipient is selected
+* FIX: Project Estimates and Invoices on Project admin adjusted
+* FIX: Payment date should be post_date
+
 = 5.5 =
 
 * FIX: Invoices and Estimates were being returned in public search queries.
