--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 6.0.3 =
+
+* FIX: Estimate template error.
+* FIX: Projects page error under come configurations
+
 = 6.0.1 =
 
 * FIX: Estimate approval failing under certain circumstances.
