--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 6.1.2 =
+
+* FIX: Some escaping issues from 6.1.1
+
 = 6.1.1 =
 
 * SECURITY: Reviewed all uses of add_query_arg, regardless if $url is passed esc_url is used. 
