--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 6.1.3 =
+
+* UPDATE: 4.2 Compatibility
+* FIX: Some escaping issues from 6.1.1
+
 = 6.1.2 =
 
 * FIX: Some escaping issues from 6.1.1
