--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+= 6.1.5 =
+
+* FIX: Some escaping fixes from 6.1.1 for some sites using PayPal
+
+= 6.1.4 =
+
+* FIX: API callback fix for activation/deactivation and updates.
+
 = 6.1.3 =
 
 * UPDATE: 4.2 Compatibility
