--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 6.1.6 =
+
+* FIX: Importers failing under certain circumstances.
+
 = 6.1.5 =
 
 * FIX: Some escaping fixes from 6.1.1 for some sites using PayPal
