--- a/changelog.txt
+++ b/changelog.txt
@@ -22,10 +22,7 @@ https://sproutapps.co/news/sprout-invoices-7-0-banners-release-party-🎉/
 * FIX: Start CSV import without using previous files
 * FIX: Fix for old PHP versions without json_last_error
 * FIX: Remove project types from submission page
-* FIX: Deposits issue for the free version (7.0.1)
-* FIX: Start CSV import without using previous files
-* FIX: Fix for old PHP versions without json_last_error
-* FIX: Remove project types from submission page
+* FIX: Language translations updated (7.0.2)
 
 = 6.2 =
 
