--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+= 7.4 =
+
+* NEW: Deposit filter allows for new add-ons
+* CHANGE: More Responsive Admin
+* CHANGE: Improved no-index via http headers
+
 = 7.3 =
 
 * FIX: Edit post link fix for notification shortcodes
