--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 7.6.1 =
+
+* FIX: Possible security fix with exposed estimates/invoices with site.com?post_type=*
+
 = 7.6 =
 
 * FIX: Deposit notification sent only if the payment is complete (not pending)
