--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
-= 8.0.1 =
+= 8.0.2 =
 
+* Fix: Javascript error when adding new users on clients page (select2 incompatibility)
 * Fix: Javascript error on some admin pages
 
 = 8.0 =
