--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 8.0.4 =
+
+* Fix: WooCommerce compatibility with their outdated version of select2
+
 = 8.0.3 =
 
 * Fix: Estimates and pre-defined items
