--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
-= 8.0.4 =
+= 8.0.5 =
 
+* Fix: Escaped Addresses
+* Fix: Redactor fix from 8.0.4
 * Fix: WooCommerce compatibility with their outdated version of select2
 
 = 8.0.3 =
