--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+= 8.3.1 =
+
+* New: Save info meta action hook.
+* New: New add-on compatibility hooks.
+* New: New add-on hook to disable invoice creation.
+* FIX: ACF compatibility fixes.
+* FIX: Select2 compatibility issues with some plugins.
+
 = 8.2 =
 
 * New: Bundled add-on for admin filtering
@@ -602,7 +610,7 @@ Welcome! This is a big update and a big step for us.
 
 * Dashboard fix
 
-= 0.9.8.3 =
+= 0.9.8.3.1 =
 
 * Import progress fix.
 
