--- a/languages/sprout-apps-nl_NL.po
+++ b/languages/sprout-apps-nl_NL.po
@@ -2785,7 +2785,7 @@ msgstr "Offertes bewerken"
 #: plugins/sprout-invoices-pro/controllers/estimates/Estimates.php:1158
 msgid ""
 "Editing estimates is intentionally easy to do but a review here would "
-"exhaust this limited space. Please review the knowledgeable for a complete "
+"exhaust this limited space. Please review the knowledgebase for a complete "
 "overview."
 msgstr ""
 "Offertes bewerken is erg eenvoudig te doen waardoor verdere uitleg zonde zou "
@@ -2920,7 +2920,7 @@ msgstr "Facturen aanpassen"
 #: plugins/sprout-invoices-pro/controllers/invoices/Invoices.php:1245
 msgid ""
 "Editing invoices is intentionally easy to do but a review here would exhaust "
-"this limited space. Please review the knowledgeable for a complete overview."
+"this limited space. Please review the knowledgebase for a complete overview."
 msgstr ""
 "Offertes bewerken is erg eenvoudig te doen waardoor verdere uitleg zonde zou "
 "zijn van de beperkte ruimte die hier beschikbaar is. Voor meer informatie "
