--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+= 8.4 =
+
+* NEW: Reduce overall size.
+* Fix: CSV Importing of already imported client users
+* Fix: Invoice template showing "Pending Payment" when balance is zero
+* Fix: Ultimate Member compatibility
+
 = 8.3.1 =
 
 * New: Save info meta action hook.
@@ -610,7 +617,7 @@ Welcome! This is a big update and a big step for us.
 
 * Dashboard fix
 
-= 0.9.8.3.1 =
+= 0.9.8.4 =
 
 * Import progress fix.
 
