--- a/languages/sprout-apps-pt_BR.po
+++ b/languages/sprout-apps-pt_BR.po
@@ -2778,7 +2778,7 @@ msgstr "Editar Orçamentos"
 #: plugins/sprout-invoices-pro/controllers/estimates/Estimates.php:1158
 msgid ""
 "Editing estimates is intentionally easy to do but a review here would "
-"exhaust this limited space. Please review the knowledgeable for a complete "
+"exhaust this limited space. Please review the knowledgebase for a complete "
 "overview."
 msgstr ""
 "Editar orçamentos é intencionalmente fácil de fazer, mas um comentário aqui "
@@ -2910,7 +2910,7 @@ msgstr "Edição de faturas"
 #: plugins/sprout-invoices-pro/controllers/invoices/Invoices.php:1245
 msgid ""
 "Editing invoices is intentionally easy to do but a review here would exhaust "
-"this limited space. Please review the knowledgeable for a complete overview."
+"this limited space. Please review the knowledgebase for a complete overview."
 msgstr ""
 "Editar faturas é intencionalmente fácil de fazer, mas um comentário aqui "
 "esgotaria este espaço limitado. Por favor, revise a base de conhecimento "
