--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 9.0.2 =
+
+* FIX: AJAX callback errors, i.e. client creation.
+
 = 9.0 =
 
 * NEW: Estimate and Invoice shortcodes
@@ -687,6 +691,6 @@ Welcome! This is a big update and a big step for us.
 
 * Initial Release
 
-= 0.9.0.1 =
+= 0.9.0.2 =
 
 * Remove debugging logs from release branch.
