--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-= 9.0.2 =
+= 9.0.3 =
 
 * FIX: AJAX callback errors, i.e. client creation.
+* FIX: Localization changes causing errors on free version.
 
 = 9.0 =
 
@@ -691,6 +692,6 @@ Welcome! This is a big update and a big step for us.
 
 * Initial Release
 
-= 0.9.0.2 =
+= 0.9.0.3 =
 
 * Remove debugging logs from release branch.
