--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+= 9.1.1 =
+
+* FIX: PayPal cart total errors with invoices that utilize discounts, deposits, and taxes with fractional totals.
+
 = 9.1 =
 
 * NEW: Notes and Terms notification shortcodes
