--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 9.3 =
+
+* UPDATE: Default Invoice/Estimate Subject to ID
+* UPDATE: Localization update, including French translation
+
 = 9.2.2 =
 
 * UPDATE: Added more line item totals within the admin
