--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,24 @@
+= 10.0 =
+
+* New: Account credits and payment credits
+* New: Improved payment reminder (new reminder email)
+* New: Estimate approval reminder (new reminder email)
+* New: Client specific payment options
+* New: Archive status, removes from front-end views
+* New: Limit automtic recurring creation
+* New: Payments dashboard widget
+* Change: Automatically change status of scheduled docs
+* Change: Automatically send invoice/estimate when published from a schedule
+* Change: Send to multiple recipeints with comma seperated list
+* Change: Add user of time keeper
+* Change: Tax and discount are seperate line item totals
+* Change: Premium reports updated with HTML5 export options
+* Change: Remove visual editor from notification admin
+* Fix: New line adjustments for address
+* Fix: New line for plain text notifications
+* Fix: Code cleanup with WP coding standards (formatting)
+* Fix: Misc. minor bug fixes
+
 = 9.4 =
 
 * Fix: Reporting fixes
