--- a/languages/sprout-invoices-fr_FR.po
+++ b/languages/sprout-invoices-fr_FR.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Stable (latest release)\n"
 "POT-Creation-Date: 2016-01-05 10:32-0800\n"
-"PO-Revision-Date: 2016-03-02 08:58-0800\n"
+"PO-Revision-Date: 2016-03-21 13:29-0800\n"
 "Last-Translator: Dan Cameron <l10n@sproutapps.co>\n"
 "Language-Team: \n"
 "Language: fr_FR\n"
@@ -2582,8 +2582,8 @@ msgid ""
 msgstr ""
 "Pour vous aider à démarrer, Sprout invoices fournit un formulaire "
 "entièrement personnalisable pour les demandes de devis. Ajouter le shortcode "
-"ci-dessous à la page pour utiliser ce formulaire par défaut: <code> "
-"[estimate_submission] Merci ! [/ estimate_submission] </ code>"
+"ci-dessous à la page pour utiliser ce formulaire par défaut: <code>"
+"[estimate_submission]Merci![/estimate_submission]</code>"
 
 #: controllers/admin/Settings.php:624
 msgid ""
@@ -2884,10 +2884,10 @@ msgid ""
 "created and given the “client” role. Creating users will allow for future "
 "functionality, i.e. client dashboards."
 msgstr ""
-"<b> Important: </ b> lorsque les clients sont créés, de nouveaux "
-"utilisateurs de WordPress sont également créés avec le rôle de «client». La "
-"création d’utilisateurs va permettre de futures fonctionnalités, à savoir "
-"des tableaux de bord pour les clients."
+"<b> Important: </b> lorsque les clients sont créés, de nouveaux utilisateurs "
+"de WordPress sont également créés avec le rôle de «client». La création "
+"d’utilisateurs va permettre de futures fonctionnalités, à savoir des "
+"tableaux de bord pour les clients."
 
 #: controllers/clients/Clients.php:1115
 #: views/admin/meta-boxes/clients/submit.php:21
@@ -4450,12 +4450,12 @@ msgid ""
 "the admin or declined by the payment processor after it was authorized or "
 "pending."
 msgstr ""
-"<b>En attente</ b> - Le paiement est peut être en attente de confirmation "
-"par l'administrateur ou en attente d’une réponse du système de paiement.<br/"
-"><b> Autorisé</ b> - Signifie que le paiement a été autorisé par le système "
-"de paiement et une emprunte du paiement sera tenté plus tard<br/><b>Annulé</ "
-"b> - Le paiement a été annulée par l'administrateur ou refusée par le "
-"système de paiement après avoir été autorisé ou en attente."
+"<b>En attente</b> - Le paiement est peut être en attente de confirmation par "
+"l'administrateur ou en attente d’une réponse du système de paiement.<br/><b> "
+"Autorisé</b> - Signifie que le paiement a été autorisé par le système de "
+"paiement et une emprunte du paiement sera tenté plus tard<br/><b>Annulé</b> "
+"- Le paiement a été annulée par l'administrateur ou refusée par le système "
+"de paiement après avoir été autorisé ou en attente."
 
 #: controllers/payments/Payments.php:213
 msgid "Managing Payments"
@@ -4470,7 +4470,7 @@ msgid ""
 "<b>Void Payment</b> - Allows you to void a payment and add a note that will "
 "be added to the Transaction Data."
 msgstr ""
-"<b> Annulation de paiement </ b> - Permet d'annuler un paiement et d'ajouter "
+"<b> Annulation de paiement </b> - Permet d'annuler un paiement et d'ajouter "
 "une note qui sera enregistré avec les données de transaction."
 
 #: controllers/payments/Payments.php:214
@@ -4478,7 +4478,7 @@ msgid ""
 "<b>Transaction Data</b> – Used to troubleshoot a payment, this is the raw "
 "data stored by a payment processor."
 msgstr ""
-"<b> Données de la transaction </ b> - Utilisé pour résoudre un problème avec "
+"<b> Données de la transaction </b> - Utilisé pour résoudre un problème avec "
 "un paiement, ce sont les données brutes stockées par le système de paiement."
 
 #: controllers/payments/Payments.php:214
@@ -4486,7 +4486,7 @@ msgid ""
 "<b>Invoice and Client</b> – A link to the associated invoice and client edit "
 "pages."
 msgstr ""
-"<b>Facture et client</ b> - Un lien vers les pages d'édition des factures et "
+"<b>Facture et client</b> - Un lien vers les pages d'édition des factures et "
 "des clients associés."
 
 #: controllers/payments/Payments.php:214
@@ -4737,8 +4737,8 @@ msgid ""
 "Records are <em>limited to 2,500 items</em>. If you want to return more use "
 "the ‘si_reports_show_records’ filter."
 msgstr ""
-"Les enregistrements sont <em>limités à 2500 éléments</ em>. Si vous "
-"souhaitez en renvoyer plus, utiliser le filtre ‘si_reports_show_records’."
+"Les enregistrements sont <em>limités à 2500 éléments</em>. Si vous souhaitez "
+"en renvoyer plus, utiliser le filtre ‘si_reports_show_records’."
 
 #: controllers/reporting/Reporting.php:880
 msgid "Dashboard Refresh"
