--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+= 10.3.1 =
+
+* Fix: Overdue invoices within widgets
+
+= 10.3 =
+
+* NEW: Add WooCommerce product import compatibility
+* Fix: Line item fix
+* Fix: Payment reminder refactored
+* Update: Redactor updated
+* Fix: PHP warning
+
 = 10.2 =
 
 * Fix: Dont' allow non editors to log credits.
@@ -663,7 +675,7 @@ https://sproutapps.co/news/sprout-invoices-7-0-banners-release-party-🎉/
 * _Bug Fixes:_
 	* Few error prevention updates
 
-= 1.0.10.2 =
+= 1.0.10.3.1 =
 
 * _Bug Fixes_
 	* Freshbooks payment import fix. FBAPI uses an unconventional amount format (i.e. 353634.980)
