--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,16 @@
+= 12 =
+
+* New: Notification testing!
+* New: Ability to delete all SI records, great for a bad first import.
+* New: Project expense overview.
+* New: New Zapier integration authorizations to prevent issues on some servers.
+* New: Allow the filtering of recurring invoices in the admin.
+* New: Allow the filtering of subscription payment invoices in the admin.
+* New: Client edit url shortcode [client_edit_url]
+* New: Client Address shortcodes [client_address]
+* New: Client website shortcodes [client_company_website]
+* New: New notification filters.
+
 = 11 =
 
 * NEW: Compatibility with expense tracking add-on
