--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+= 14.0.3 =
+
+* FIX: Shipping fees not loaded
+* NEW: Delay loading hook, si_delayed_load
+
 = 14.0.2 =
 
 * COMPAT: WPSEO compatibility
