--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,15 @@
+= 15.1.2 =
+
+* Fix: Estimate template function typo
+* Fix: Service Fee add-on updated
+* Update: Select2 Upgraded
+
+= 15.1 =
+
+* NEW: Sprout Billings support
+* Fix: Auto select the first payment method if only one exists
+* Fix: Multiple theme selections
+
 = 15.0 =
 
 * NEW: New Default Theme!!!!
